13806
```scala
% scalac case class Test(private[this] val a:String)
a.scala:1: error: wrong number of arguments for <none>: (String)Test
case class Test(private[this] val a:String)
           ^
```

See my comments on scala/bug#1373.
